# lerna

./: CMakeLists.txt  README.md
debian/: changelog  control  files  libtinycthread0-dbg.substvars  libtinycthread0.symbols  rules
debian/libtinycthread-dev/DEBIAN/: control  md5sums
debian/libtinycthread0-dbg/DEBIAN/: control  md5sums
debian/libtinycthread0-dbg/usr/share/doc/: libtinycthread0-dbg
debian/libtinycthread0/DEBIAN/: control  md5sums  shlibs
debian/libtinycthread0/usr/lib/x86_64-linux-gnu/: libtinycthread.so.0
debian/patches/: 0001-Add-CMake-support.patch  series
debian/tmp/usr/lib/x86_64-linux-gnu/: libtinycthread.so.0
inc/: lerna.h
src/: lerna.c
test/: main.cpp
